<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaqueteFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonVoz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/txVoz"
                android:background="@drawable/button_rounded_border"/>

            <FrameLayout
                android:id="@+id/frContenedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <Button
                android:id="@+id/buttonTodoInc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rounded_border"
                android:layout_gravity="center_horizontal"
                android:text="@string/txTodoIn" />

            <FrameLayout
                android:id="@+id/frTodoIncl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <Button
                android:id="@+id/buttonInternet"
                android:background="@drawable/button_rounded_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/txInternet" />

            <FrameLayout
                android:id="@+id/frContenedorInter"
                android:layout_width="match_parent"
                android:background="@drawable/button_rounded_border"
                android:layout_height="wrap_content">

            </FrameLayout>

            <Button
                android:id="@+id/buttonChat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rounded_border"
                android:layout_gravity="center_horizontal"
                android:text="@string/txChat" />

            <FrameLayout
                android:id="@+id/frChat"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </FrameLayout>

            <Button
                android:id="@+id/buttonApps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rounded_border"
                android:layout_gravity="center_horizontal"
                android:text="@string/txRedes" />

            <FrameLayout
                android:id="@+id/frApps"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </FrameLayout>

            <Button
                android:id="@+id/buttonLargaDistancia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rounded_border"
                android:text="@string/txLarggaDistancia" />

            <FrameLayout
                android:id="@+id/frLargaDistancia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <Button
                android:id="@+id/buttonMinutero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rounded_border"
                android:text="@string/txMinuteros" />

            <FrameLayout
                android:id="@+id/frMinuteors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <Button
                android:id="@+id/buttonTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_rounded_border"
                android:text="@string/txTelevision" />

            <FrameLayout
                android:id="@+id/frTv"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </FrameLayout>

            <Button
                android:id="@+id/buttonInter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rounded_border"
                android:layout_gravity="center_horizontal"
                android:text="@string/txInternetPrepago" />

            <FrameLayout
                android:id="@+id/frInterIna"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </FrameLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>